// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial render 1`] = `
<li
  className="Cupcake "
  style={
    Object {
      "bottom": "134px",
      "height": "56px",
      "left": "345px",
      "width": "42px",
    }
  }
>
  
</li>
`;

exports[`Render with wait (after frosting hit) 1`] = `
<li
  className="Cupcake "
  style={
    Object {
      "bottom": "134px",
      "height": "56px",
      "left": "345px",
      "width": "42px",
    }
  }
>
  <span
    className="burst"
  />
</li>
`;
